--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">cheers</string>
+    <string name="app_name">CheersApp</string>
+    <item type="id" name="adViewId">12345</item>
 
 </resources>
